; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-clock.c_ff_clock_init.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-clock.c_ff_clock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_clock = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ff_clock* @ff_clock_init() #0 {
  %1 = alloca %struct.ff_clock*, align 8
  %2 = alloca %struct.ff_clock*, align 8
  %3 = call %struct.ff_clock* @av_mallocz(i32 8)
  store %struct.ff_clock* %3, %struct.ff_clock** %2, align 8
  %4 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %5 = icmp eq %struct.ff_clock* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store %struct.ff_clock* null, %struct.ff_clock** %1, align 8
  br label %28

7:                                                ; preds = %0
  %8 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %9 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %8, i32 0, i32 0
  %10 = call i64 @pthread_mutex_init(i32* %9, i32* null)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  br label %25

13:                                               ; preds = %7
  %14 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %15 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %14, i32 0, i32 1
  %16 = call i64 @pthread_cond_init(i32* %15, i32* null)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  br label %21

19:                                               ; preds = %13
  %20 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  store %struct.ff_clock* %20, %struct.ff_clock** %1, align 8
  br label %28

21:                                               ; preds = %18
  %22 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %23 = getelementptr inbounds %struct.ff_clock, %struct.ff_clock* %22, i32 0, i32 0
  %24 = call i32 @pthread_mutex_destroy(i32* %23)
  br label %25

25:                                               ; preds = %21, %12
  %26 = load %struct.ff_clock*, %struct.ff_clock** %2, align 8
  %27 = call i32 @av_free(%struct.ff_clock* %26)
  store %struct.ff_clock* null, %struct.ff_clock** %1, align 8
  br label %28

28:                                               ; preds = %25, %19, %6
  %29 = load %struct.ff_clock*, %struct.ff_clock** %1, align 8
  ret %struct.ff_clock* %29
}

declare dso_local %struct.ff_clock* @av_mallocz(i32) #1

declare dso_local i64 @pthread_mutex_init(i32*, i32*) #1

declare dso_local i64 @pthread_cond_init(i32*, i32*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @av_free(%struct.ff_clock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
